--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -9,7 +10,21 @@ img {
 
 .title {
   font-size: 36px;
-  font-weight: 900;
+  font-weight: 900
+}
+
+.board {
+  display: flex;
+  justify-content: center;
+  gap:40px;
+  margin-top: 32px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
 }
 
 /* do not edit this footer */
